egress-database-connectivity-servicemesh/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: egress-psql
  labels:
    istio.io/rev: default
