egress-database-connectivity-servicemesh/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  name: psql-client
spec:
  progressDeadlineSeconds: 10
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: psql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/nativeSidecar: 'true'
        sidecar.istio.io/componentLogLevel: router:debug,connection:debug
      creationTimestamp: null
      labels:
        app: psql
        egress.io/managed: egress-postgres
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: docker.io/alpine/psql
          imagePullPolicy: Always
          name: container
          command:
          - /bin/sleep
          args:
          - "864000"
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccount: psql
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 3
