egress-database-connectivity-servicemesh/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress-gateway
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      istio: egress-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
        #sidecar.istio.io/logLevel: debug
        sidecar.istio.io/componentLogLevel: rbac:trace
      creationTimestamp: null
      labels:
        istio: egress-gateway
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: auto
          imagePullPolicy: Always
          name: istio-proxy
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
