egress-database-connectivity-servicemesh/destinationrule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: postgres
spec:
  exportTo:
  - .
  host: egress-gateway.egress-psql.svc.cluster.local
  subsets:
  - name: external
